fixed focused mode on dark mode toggle creating a green box after clicking. Updated moon icon to be white

--- a/global/global-css/darkMode.css
+++ b/global/global-css/darkMode.css
@@ -69,3 +69,7 @@ body.dark-mode .txt4 {
 body.dark-mode .txt3 {
     color: white;
 }
+
+.fa-moon {
+    color: white;
+}
